# RADV

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build-and-push.sh  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  query_finance_agent.py  requirements.txt  run_scenario.py
scenarios/finance/: README.md  finance_agent.py  finance_evaluator.py  finance_tools.py  green_agent_card.toml  scenario.toml  tool_provider.py  tools.py  utils.py
